# start

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: architecture.md  component-map.md  emotional-model.md  git-submodules.md  roadmap.md  vision.md
experiments/lyra/: README.md
experiments/mesh/: README.md
experiments/nexus/: README.md
scripts/: bootstrap_new_project.py  sync_with_lyra.sh
shared/config/: __init__.py
shared/protocols/: __init__.py
shared/schemas/: __init__.py  emotional_state.py  message.py
shared/utils/: __init__.py
templates/hardware-prototype/: README.md
templates/mesh-connector/: README.md
templates/python-agent/: README.md  agent.py
templates/rust-component/: README.md
templates/swarm-experiment/: README.md
